docs/errors/examples/const-reassignment/const-reassignment.grob
// E0201 — reassigning a `const` binding
const maxRetries := 3

maxRetries = 5

print(maxRetries)
